--- a/ALARM V2.ipynb
+++ b/ALARM V2.ipynb
@@ -16,14 +16,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 735
+          "height": 284
         },
         "id": "lE63VwTbtNs3",
-        "outputId": "a055ce72-680d-4974-e6d8-e78b3be75109"
+        "outputId": "e91cb846-6c27-4ba4-f670-f47dcf461ffd"
       },
       "outputs": [
         {
@@ -41,9 +41,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-6218a301-10b4-40e6-8abc-eee6d784e1ae\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-306d567d-db73-4258-b017-71316a58a685\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-6218a301-10b4-40e6-8abc-eee6d784e1ae\">\n",
+              "     <output id=\"result-306d567d-db73-4258-b017-71316a58a685\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -231,14 +231,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving testx.xlsx to testx.xlsx\n"
+            "Saving test1.xlsx to test1.xlsx\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-3-f6e05ec8b5cb>:86: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+            "<ipython-input-2-305b6e9c8bed>:86: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
             "  condition_times_dict = condition_times.groupby('SOURCE NAME').apply(\n"
           ]
         },
@@ -248,36 +248,10 @@
           "text": [
             "\n",
             "MAIN MENU\n",
-            "1. Alarm Equipment Analysis\n",
-            "2. Alarm Condition Name Analysis\n",
-            "3. Export Full Results\n",
-            "4. Exit\n",
-            "Select option: 1\n",
-            "\n",
-            "ALARM EQUIPMENT ANALYSIS\n",
-            "1. All equipment analysis\n",
-            "2. Specific equipment analysis\n",
-            "3. Back to main menu\n",
-            "Select analysis: 3\n",
-            "\n",
-            "MAIN MENU\n",
-            "1. Alarm Equipment Analysis\n",
-            "2. Alarm Condition Name Analysis\n",
-            "3. Export Full Results\n",
-            "4. Exit\n",
-            "Select option: 2\n",
-            "\n",
-            "ALARM CONDITION ANALYSIS\n",
-            "1. All condition analysis\n",
-            "2. Specific condition analysis\n",
-            "3. Back to main menu\n",
-            "Select analysis: 3\n",
-            "\n",
-            "MAIN MENU\n",
-            "1. Alarm Equipment Analysis\n",
-            "2. Alarm Condition Name Analysis\n",
-            "3. Export Full Results\n",
-            "4. Exit\n",
+            "1.Alarm Equipment Analysis\n",
+            "2.Alarm Condition Name Analysis\n",
+            "3.Export Full Results\n",
+            "4.Exit\n",
             "Select option: 4\n",
             "Exiting program...\n"
           ]
@@ -479,19 +453,19 @@
         "\n",
         "    while True:\n",
         "        print(\"\\nMAIN MENU\")\n",
-        "        print(\"1. Alarm Equipment Analysis\")\n",
-        "        print(\"2. Alarm Condition Name Analysis\")\n",
-        "        print(\"3. Export Full Results\")\n",
-        "        print(\"4. Exit\")\n",
+        "        print(\"1.Alarm Equipment Analysis\")\n",
+        "        print(\"2.Alarm Condition Name Analysis\")\n",
+        "        print(\"3.Export Full Results\")\n",
+        "        print(\"4.Exit\")\n",
         "\n",
         "        main_choice = input(\"Select option: \")\n",
         "\n",
         "        if main_choice == \"1\":\n",
         "            while True:\n",
         "                print(\"\\nALARM EQUIPMENT ANALYSIS\")\n",
-        "                print(\"1. All equipment analysis\")\n",
-        "                print(\"2. Specific equipment analysis\")\n",
-        "                print(\"3. Back to main menu\")\n",
+        "                print(\"1.All equipment analysis\")\n",
+        "                print(\"2.Specific equipment analysis\")\n",
+        "                print(\"3.Back to main menu\")\n",
         "\n",
         "                equip_choice = input(\"Select analysis: \")\n",
         "\n",
@@ -517,9 +491,9 @@
         "        elif main_choice == \"2\":\n",
         "            while True:\n",
         "                print(\"\\nALARM CONDITION ANALYSIS\")\n",
-        "                print(\"1. All condition analysis\")\n",
-        "                print(\"2. Specific condition analysis\")\n",
-        "                print(\"3. Back to main menu\")\n",
+        "                print(\"1.All condition analysis\")\n",
+        "                print(\"2.Specific condition analysis\")\n",
+        "                print(\"3.Back to main menu\")\n",
         "\n",
         "                cond_choice = input(\"Select analysis: \")\n",
         "\n",
